# mcp-launchpad

./: .gitignore  CLAUDE.md  OAUTH_SECURITY_AUDIT.md  OPENCODE.md  README.md  coverage.json  main.py  mcp.json  opencode.jsonc  pyproject.toml
.github/workflows/: opencode.yml
docs/: Anthropic Advanced Tool Use.md  PROPOSAL.md
mcp_launchpad/: __init__.py  cache.py  cli.py  config.py  connection.py  daemon.py  ipc.py  output.py  platform.py  search.py  session.py  state.py  suggestions.py
mcp_launchpad/oauth/: __init__.py  callback.py  discovery.py  flow.py  manager.py  store.py
scripts/: sync-mcp-config.py
tests/: __init__.py  conftest.py  test_cache.py  test_cli.py  test_config.py  test_connection.py  test_daemon.py  test_error_handling.py  test_ipc.py  test_oauth_flow.py  test_output.py  test_platform.py  test_search.py  test_session.py  test_suggestions.py
